--- a/README.Rmd
+++ b/README.Rmd
@@ -84,29 +84,30 @@ example, `as_tibble()` would return a tibble).
 
 Current methods and functions provided by {tidyterra} are:
 
-| tidyverse method             | SpatVector                    | SpatRaster                                                                                     |
-|---------------------|---------------------|--------------------------------------|
-| `tibble::as_tibble()`        | ✔️                            | ✔️                                                                                             |
-| `dplyr::select()`            | ✔️                            | ✔️ Select layers                                                                               |
-| `dplyr::mutate()`            | ✔️                            | ✔️ Create /modify layers                                                                       |
-| `dplyr::transmute()`         | ✔️                            | ✔️                                                                                             |
-| `dplyr::filter()`            | ✔️                            | ✔️ Modify cells values and (additionally) remove outer cells.                                  |
-| `dplyr::slice()`             | ✔️                            | ✔️ Additional methods for slicing by row and column.                                           |
-| `dplyr::pull()`              | ✔️                            | ✔️                                                                                             |
-| `dplyr::rename()`            | ✔️                            | ✔️                                                                                             |
-| `dplyr::relocate()`          | ✔️                            | ✔️                                                                                             |
-| `dplyr::distinct()`          | ✔️                            |                                                                                                |
-| `dplyr::arrange()`           | ✔️                            |                                                                                                |
-| `dplyr::glimpse()`           | ✔️                            | ✔️                                                                                             |
-| `dplyr::inner_join()` family | ✔️                            |                                                                                                |
-| `dplyr::summarise()`         | ✔️                            |                                                                                                |
-| `dplyr::group_by()` family   | ✔️                            |                                                                                                |
-| `dplyr::count()`, `tally()`  | ✔️                            |                                                                                                |
-| `tidyr::drop_na()`           | ✔️                            | ✔️ Remove cell values with `NA` on any layer. Additionally, outer cells with `NA` are removed. |
-| `tidyr::replace_na()`        | ✔️                            | ✔️                                                                                             |
-| `ggplot2::autoplot()`        | ✔️                            | ✔️                                                                                             |
-| `ggplot2::fortify()`         | ✔️ to sf via `sf::st_as_sf()` | To a tibble with coordinates.                                                                  |
-| `ggplot2::geom_*()`          | ✔️ `geom_spatvector()`        | ✔️ `geom_spatraster()` and `geom_spatraster_rgb()`.                                            |
+| tidyverse method                            | SpatVector                                    | SpatRaster                                                                                     |
+|---------------------------------------------|-----------------------------------------------|------------------------------------------------------------------------------------------------|
+| `tibble::as_tibble()`                       | ✔️                                            | ✔️                                                                                             |
+| `dplyr::select()`                           | ✔️                                            | ✔️ Select layers                                                                               |
+| `dplyr::mutate()`                           | ✔️                                            | ✔️ Create /modify layers                                                                       |
+| `dplyr::transmute()`                        | ✔️                                            | ✔️                                                                                             |
+| `dplyr::filter()`                           | ✔️                                            | ✔️ Modify cells values and (additionally) remove outer cells.                                  |
+| `dplyr::slice()`                            | ✔️                                            | ✔️ Additional methods for slicing by row and column.                                           |
+| `dplyr::pull()`                             | ✔️                                            | ✔️                                                                                             |
+| `dplyr::rename()`                           | ✔️                                            | ✔️                                                                                             |
+| `dplyr::relocate()`                         | ✔️                                            | ✔️                                                                                             |
+| `dplyr::distinct()`                         | ✔️                                            |                                                                                                |
+| `dplyr::arrange()`                          | ✔️                                            |                                                                                                |
+| `dplyr::glimpse()`                          | ✔️                                            | ✔️                                                                                             |
+| `dplyr::inner_join()` family                | ✔️                                            |                                                                                                |
+| `dplyr::summarise()`                        | ✔️                                            |                                                                                                |
+| `dplyr::group_by()` family                  | ✔️                                            |                                                                                                |
+| `dplyr::count()`, `tally()`                 | ✔️                                            |                                                                                                |
+| `dplyr::bind_cols()` / `dplyr::bind_rows()` | ✔️ as `bind_spat_cols()` / `bind_spat_rows()` |                                                                                                |
+| `tidyr::drop_na()`                          | ✔️                                            | ✔️ Remove cell values with `NA` on any layer. Additionally, outer cells with `NA` are removed. |
+| `tidyr::replace_na()`                       | ✔️                                            | ✔️                                                                                             |
+| `ggplot2::autoplot()`                       | ✔️                                            | ✔️                                                                                             |
+| `ggplot2::fortify()`                        | ✔️ to sf via `sf::st_as_sf()`                 | To a tibble with coordinates.                                                                  |
+| `ggplot2::geom_*()`                         | ✔️ `geom_spatvector()`                        | ✔️ `geom_spatraster()` and `geom_spatraster_rgb()`.                                            |
 
 ## :exclamation: A note on performance
 
