--- a/vignettes/tidyterra.Rmd
+++ b/vignettes/tidyterra.Rmd
@@ -85,6 +85,7 @@ Currently, the following methods are available:
 | `dplyr::summarise()`         | ✔️                            |                                                                                                |
 | `dplyr::group_by()` family   | ✔️                            |                                                                                                |
 | `dplyr::count()`, `tally()`  | ✔️                            |                                                                                                |
+| `dplyr::bind_cols()` / `dplyr::bind_rows()` | ✔️ as `bind_spat_cols()` / `bind_spat_rows()` |                                                                                                |
 | `tidyr::drop_na()`           | ✔️                            | ✔️ Remove cell values with `NA` on any layer. Additionally, outer cells with `NA` are removed. |
 | `tidyr::replace_na()`        | ✔️                            | ✔️                                                                                             |
 | `ggplot2::autoplot()`        | ✔️                            | ✔️                                                                                             |
