--- a/README.Rmd
+++ b/README.Rmd
@@ -82,7 +82,7 @@ example, `as_tibble()` would return a tibble).
 Current methods and functions provided by {tidyterra} are:
 
 | tidyverse method                            | SpatVector                                    | SpatRaster                                                                                     |
-|--------------------|--------------------|----------------------------------------|
+|--------------------|--------------------|---------------------------------------|
 | `tibble::as_tibble()`                       | ✔️                                            | ✔️                                                                                             |
 | `dplyr::select()`                           | ✔️                                            | ✔️ Select layers                                                                               |
 | `dplyr::mutate()`                           | ✔️                                            | ✔️ Create /modify layers                                                                       |
@@ -98,6 +98,7 @@ Current methods and functions provided by {tidyterra} are:
 | `dplyr::inner_join()` family                | ✔️                                            |                                                                                                |
 | `dplyr::summarise()`                        | ✔️                                            |                                                                                                |
 | `dplyr::group_by()` family                  | ✔️                                            |                                                                                                |
+| `dplyr::rowwise()`                          | ✔️                                            |                                                                                                |
 | `dplyr::count()`, `tally()`                 | ✔️                                            |                                                                                                |
 | `dplyr::bind_cols()` / `dplyr::bind_rows()` | ✔️ as `bind_spat_cols()` / `bind_spat_rows()` |                                                                                                |
 | `tidyr::drop_na()`                          | ✔️                                            | ✔️ Remove cell values with `NA` on any layer. Additionally, outer cells with `NA` are removed. |
