--- a/vignettes/tidyterra.Rmd
+++ b/vignettes/tidyterra.Rmd
@@ -69,31 +69,31 @@ library(tidyr)
 
 Currently, the following methods are available:
 
-| tidyverse method             | SpatVector                    | SpatRaster                                                                                     |
-|------------------------------|-------------------------------|------------------------------------------------------------------------------------------------|
-| `tibble::as_tibble()`        | ✔️                            | ✔️                                                                                             |
-| `dplyr::select()`            | ✔️                            | ✔️ Select layers                                                                               |
-| `dplyr::mutate()`            | ✔️                            | ✔️ Create /modify layers                                                                       |
-| `dplyr::transmute()`         | ✔️                            | ✔️                                                                                             |
-| `dplyr::filter()`            | ✔️                            | ✔️ Modify cells values and (additionally) remove outer cells.                                  |
-| `dplyr::slice()`             | ✔️                            | ✔️ Additional methods for slicing by row and column.                                           |
-| `dplyr::pull()`              | ✔️                            | ✔️                                                                                             |
-| `dplyr::rename()`            | ✔️                            | ✔️                                                                                             |
-| `dplyr::relocate()`          | ✔️                            | ✔️                                                                                             |
-| `dplyr::distinct()`          | ✔️                            |                                                                                                |
-| `dplyr::arrange()`           | ✔️                            |                                                                                                |
-| `dplyr::glimpse()`           | ✔️                            | ✔️                                                                                             |
-| `dplyr::inner_join()` family | ✔️                            |                                                                                                |
-| `dplyr::summarise()`         | ✔️                            |                                                                                                |
-| `dplyr::group_by()` family   | ✔️                            |                                                                                                |
-| `dplyr::rowwise()`           | ✔️                            |                                                                                                |
-| `dplyr::count()`, `tally()`  | ✔️                            |                                                                                                |
+| tidyverse method                            | SpatVector                                    | SpatRaster                                                                                     |
+|------------------|------------------|---------------------------------------------|
+| `tibble::as_tibble()`                       | ✔️                                            | ✔️                                                                                             |
+| `dplyr::select()`                           | ✔️                                            | ✔️ Select layers                                                                               |
+| `dplyr::mutate()`                           | ✔️                                            | ✔️ Create /modify layers                                                                       |
+| `dplyr::transmute()`                        | ✔️                                            | ✔️                                                                                             |
+| `dplyr::filter()`                           | ✔️                                            | ✔️ Modify cells values and (additionally) remove outer cells.                                  |
+| `dplyr::slice()`                            | ✔️                                            | ✔️ Additional methods for slicing by row and column.                                           |
+| `dplyr::pull()`                             | ✔️                                            | ✔️                                                                                             |
+| `dplyr::rename()`                           | ✔️                                            | ✔️                                                                                             |
+| `dplyr::relocate()`                         | ✔️                                            | ✔️                                                                                             |
+| `dplyr::distinct()`                         | ✔️                                            |                                                                                                |
+| `dplyr::arrange()`                          | ✔️                                            |                                                                                                |
+| `dplyr::glimpse()`                          | ✔️                                            | ✔️                                                                                             |
+| `dplyr::inner_join()` family                | ✔️                                            |                                                                                                |
+| `dplyr::summarise()`                        | ✔️                                            |                                                                                                |
+| `dplyr::group_by()` family                  | ✔️                                            |                                                                                                |
+| `dplyr::rowwise()`                          | ✔️                                            |                                                                                                |
+| `dplyr::count()`, `tally()`                 | ✔️                                            |                                                                                                |
 | `dplyr::bind_cols()` / `dplyr::bind_rows()` | ✔️ as `bind_spat_cols()` / `bind_spat_rows()` |                                                                                                |
-| `tidyr::drop_na()`           | ✔️                            | ✔️ Remove cell values with `NA` on any layer. Additionally, outer cells with `NA` are removed. |
-| `tidyr::replace_na()`        | ✔️                            | ✔️                                                                                             |
-| `ggplot2::autoplot()`        | ✔️                            | ✔️                                                                                             |
-| `ggplot2::fortify()`         | ✔️ to sf via `sf::st_as_sf()` | To a tibble with coordinates.                                                                  |
-| `ggplot2::geom_*()`          | ✔️ `geom_spatvector()`        | ✔️ `geom_spatraster()` and `geom_spatraster_rgb()`.                                            |
+| `tidyr::drop_na()`                          | ✔️                                            | ✔️ Remove cell values with `NA` on any layer. Additionally, outer cells with `NA` are removed. |
+| `tidyr::replace_na()`                       | ✔️                                            | ✔️                                                                                             |
+| `ggplot2::autoplot()`                       | ✔️                                            | ✔️                                                                                             |
+| `ggplot2::fortify()`                        | ✔️ to sf via `sf::st_as_sf()`                 | To a tibble with coordinates.                                                                  |
+| `ggplot2::geom_*()`                         | ✔️ `geom_spatvector()`                        | ✔️ `geom_spatraster()` and `geom_spatraster_rgb()`.                                            |
 
 Let's see some of them in action:
 
@@ -221,13 +221,12 @@ ggplot() +
 ```
 
 <div class="figure">
-<img src="./terraplots-1.png" alt="plot of chunk terraplots" width="100%" />
-<p class="caption">plot of chunk terraplots</p>
+<img src="./faceted-1.png" alt="A faceted SpatRaster" width="100%" />
+<p class="caption">A faceted SpatRaster</p>
 </div>
 
+
 ```r
-
-
 # Contour lines for a specific layer
 
 f_volcano <- system.file("extdata/volcano2.tif", package = "tidyterra")
@@ -242,13 +241,12 @@ ggplot() +
 ```
 
 <div class="figure">
-<img src="./terraplots-2.png" alt="plot of chunk terraplots" width="100%" />
-<p class="caption">plot of chunk terraplots</p>
+<img src="./contourlines-1.png" alt="Contour lines plot for a SpatRaster" width="100%" />
+<p class="caption">Contour lines plot for a SpatRaster</p>
 </div>
 
+
 ```r
-
-
 # Contour filled
 
 ggplot() +
@@ -258,8 +256,8 @@ ggplot() +
 ```
 
 <div class="figure">
-<img src="./terraplots-3.png" alt="plot of chunk terraplots" width="100%" />
-<p class="caption">plot of chunk terraplots</p>
+<img src="./contourfilled-1.png" alt="Contour filled plot for a SpatRaster" width="100%" />
+<p class="caption">Contour filled plot for a SpatRaster</p>
 </div>
 
 With {tidyterra} you can also plot RGB SpatRasters to add imagery to your plots:
@@ -284,8 +282,8 @@ rgb_plot
 ```
 
 <div class="figure">
-<img src="./rgb-1.png" alt="plot of chunk rgb" width="100%" />
-<p class="caption">plot of chunk rgb</p>
+<img src="./rgb-1.png" alt="Plotting a RGB SpatRaster" width="100%" />
+<p class="caption">Plotting a RGB SpatRaster</p>
 </div>
 
 ```r
@@ -296,8 +294,8 @@ rgb_plot +
 ```
 
 <div class="figure">
-<img src="./rgb-2.png" alt="plot of chunk rgb" width="100%" />
-<p class="caption">plot of chunk rgb</p>
+<img src="./rgb-2.png" alt="Changing CRS of the RGB plot" width="100%" />
+<p class="caption">Changing CRS of the RGB plot</p>
 </div>
 
 {tidyterra} provides selected scales that are suitable for creating hypsometric
@@ -339,8 +337,8 @@ ggplot() +
 ```
 
 <div class="figure">
-<img src="./hypso-1.png" alt="plot of chunk hypso" width="100%" />
-<p class="caption">plot of chunk hypso</p>
+<img src="./hypso-1.png" alt="Hypsometric tints" width="100%" />
+<p class="caption">Hypsometric tints</p>
 </div>
 
 ### SpatVectors
@@ -362,8 +360,8 @@ ggplot(v_lux) +
 ```
 
 <div class="figure">
-<img src="./lux_ggplot-1.png" alt="plot of chunk lux_ggplot" width="100%" />
-<p class="caption">plot of chunk lux_ggplot</p>
+<img src="./lux_ggplot-1.png" alt="Plotting SpatVectors" width="100%" />
+<p class="caption">Plotting SpatVectors</p>
 </div>
 
 The underlying implementation is to take advantage of the conversion
@@ -392,8 +390,8 @@ v_lux %>%
 ```
 
 <div class="figure">
-<img src="./aggregate-1.png" alt="plot of chunk aggregate" width="100%" />
-<p class="caption">plot of chunk aggregate</p>
+<img src="./aggregate-1.png" alt="Union of SpatVectors" width="100%" />
+<p class="caption">Union of SpatVectors</p>
 </div>
 
 ```r
@@ -418,6 +416,6 @@ v_lux %>%
 ```
 
 <div class="figure">
-<img src="./aggregate-2.png" alt="plot of chunk aggregate" width="100%" />
-<p class="caption">plot of chunk aggregate</p>
+<img src="./aggregate-2.png" alt="Union of SpatVector keeping the inner borders" width="100%" />
+<p class="caption">Union of SpatVector keeping the inner borders</p>
 </div>
