--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -39,7 +39,7 @@
 	author       = {Royé, Dominic},
 	year         = 2022,
 	month        = jul,
-	journal      = {Dr. Dominic Royé},
+	journal      = {{Dr. Dominic Royé}},
 	url          = {https://dominicroye.github.io/en/2022/hillshade-effects/},
 	urldate      = {2023-07-17},
 	abstract     = {It is very common to see relief maps with shadow effects, also known as 'hillshade', which generates visual depth. How can we create these effects in R and how to include them in ggplot2?},
@@ -50,14 +50,14 @@
 	author       = {Hernangómez, Diego},
 	year         = 2022,
 	month        = may,
-	journal      = {One world: Projects, maps and coding},
+	journal      = {{One world: Projects, maps and coding}},
 	url          = {https://dieghernan.github.io/202205_tidyterra/},
 	urldate      = {2023-07-17},
 	abstract     = {Easily work and ggplot SpatRasters - tidyterra provides tidyverse methods for terra objects and geom functions for plotting with ggplot2....},
 	language     = {en-US}
 }
 @misc{semba_getting_2023,
-	title        = {Getting {GEBCO} {Bathymetry} {Data} and glean the power of {terra} and {tidyterra} packages for raster and vector objects},
+	title        = {Getting {GEBCO} Bathymetry Data and glean the power of {terra} and {tidyterra} packages for raster and vector objects},
 	author       = {Semba, Masumbuko},
 	year         = 2023,
 	month        = mar,
@@ -67,11 +67,11 @@
 	language     = {en}
 }
 @article{Bahlburg2023.05.09.540012,
-	title        = {Intercomparison of growth models for Antarctic krill (Euphausia superba): towards a generalised understanding},
+	title        = {Intercomparison of growth models for {Antarctic} krill ({Euphausia} {superba}): towards a generalised understanding},
 	author       = {Dominik Bahlburg and Sally Thorpe and Bettina Meyer and Uta Berger and Eugene Murphy},
 	year         = 2023,
 	journal      = {bioRxiv},
-	publisher    = {Cold Spring Harbor Laboratory},
+	publisher    = {{Cold Spring Harbor Laboratory}},
 	doi          = {10.1101/2023.05.09.540012},
 	url          = {https://www.biorxiv.org/content/early/2023/05/12/2023.05.09.540012},
 	elocation-id = {2023.05.09.540012},
