--- a/vignettes/articles/wild.Rmd
+++ b/vignettes/articles/wild.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "tidyterra in the wild"
+description: Use of tidyterra in publications.
 bibliography: INPUBS.bib
 nocite: '@*'
+csl: apa.csl
 ---
 
 **{tidyterra}** package has been used in the following publications:
