--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -99,3 +99,11 @@
 	abstract     = {A book for Spatial Statistics for Data Science with R.},
 	language     = {en}
 }
+@misc{isken2023,
+	title        = {Hello World Maps in {R} Using Both Raster and Vector Data},
+	author       = {Mark Isken},
+	date         = {2023-04-03},
+	langid       = {en},
+	url          = {https://bitsofanalytics.org/posts/hello_world_mapping_r/hello_world_map_r.html}
+}
+
