Add more references

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -106,4 +106,23 @@
 	langid       = {en},
 	url          = {https://bitsofanalytics.org/posts/hello_world_mapping_r/hello_world_map_r.html}
 }
-
+@misc{semba_compute_2023,
+	title        = {Compute Normalized Difference Vegetation Index in {R}},
+	author       = {Semba, Masumbuko},
+	year         = 2023,
+	month        = apr,
+	journal      = {{ng'ara}},
+	url          = {https://lugoga.github.io/semba-quarto/posts/ndvi/},
+	urldate      = {2023-07-17},
+	language     = {en}
+}
+@misc{popovich_animated_2023,
+	title        = {Animated raster maps with {ggplot2} and {gifski} in {R}},
+	author       = {Popovic, Milos},
+	year         = 2023,
+	month        = jul,
+	journal      = {{Youtube}},
+	url          = {https://youtube.com/watch?v=GMnuNjnXnS8},
+	urldate      = {2023-07-17},
+	language     = {en}
+}
