--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -126,3 +126,15 @@
 	urldate      = {2023-07-17},
 	language     = {en}
 }
+@article{Lacko2023,
+	title        = {{RCzechia}: Spatial Objects of the {Czech} {Republic}},
+	author       = {Jindra Lacko},
+	year         = 2023,
+	journal      = {Journal of Open Source Software},
+	publisher    = {The Open Journal},
+	volume       = 8,
+	number       = 83,
+	pages        = 5082,
+	doi          = {10.21105/joss.05082},
+	url          = {https://doi.org/10.21105/joss.05082}
+}
