--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,7 @@ results](https://badges.cranchecks.info/worst/tidyterra.svg)](https://cran.r-pro
 [![Downloads](https://cranlogs.r-pkg.org/badges/tidyterra)](https://CRAN.R-project.org/package=tidyterra)
 [![R-CMD-check](https://github.com/dieghernan/tidyterra/actions/workflows/check-full.yaml/badge.svg)](https://github.com/dieghernan/tidyterra/actions/workflows/check-full.yaml)
 [![codecov](https://codecov.io/gh/dieghernan/tidyterra/branch/main/graph/badge.svg?token=blvDmRjcfb)](https://app.codecov.io/gh/dieghernan/tidyterra)
-[![r-universe](https://dieghernan.r-universe.dev/badges/tidyterra)](https://dieghernan.r-universe.dev/)
+[![r-universe](https://dieghernan.r-universe.dev/badges/tidyterra)](https://dieghernan.r-universe.dev/tidyterra)
 [![DOI](https://img.shields.io/badge/DOI-10.5281/zenodo.6572471-blue)](https://doi.org/10.5281/zenodo.6572471)
 [![CodeFactor](https://www.codefactor.io/repository/github/dieghernan/tidyterra/badge)](https://www.codefactor.io/repository/github/dieghernan/tidyterra)
 [![Project Status: Active -- The project has reached a stable, usable state and
@@ -82,7 +82,7 @@ example, `as_tibble()` would return a tibble).
 Current methods and functions provided by {tidyterra} are:
 
 | tidyverse method                            | SpatVector                                    | SpatRaster                                                                                     |
-|--------------------|--------------------|---------------------------------------|
+|---------------------|---------------------|--------------------------------------|
 | `tibble::as_tibble()`                       | ✔️                                            | ✔️                                                                                             |
 | `dplyr::select()`                           | ✔️                                            | ✔️ Select layers                                                                               |
 | `dplyr::mutate()`                           | ✔️                                            | ✔️ Create /modify layers                                                                       |
@@ -160,71 +160,69 @@ objects:
 
 ```{r example-temp}
 library(tidyterra)
-
 library(terra)
 
-
 # Temperatures
-f <- system.file("extdata/cyl_temp.tif", package = "tidyterra")
+rastertemp <- rast(system.file("extdata/cyl_temp.tif", package = "tidyterra"))
 
-rastertemp <- rast(f)
+rastertemp
 
-library(ggplot2)
+# Rename
+rastertemp <- rastertemp %>%
+  rename(April = tavg_04, May = tavg_05, June = tavg_06)
 
 # Facet all layers
+library(ggplot2)
 
 ggplot() +
   geom_spatraster(data = rastertemp) +
   facet_wrap(~lyr, ncol = 2) +
   scale_fill_whitebox_c(
     palette = "muted",
-    labels = scales::label_number(suffix = "º")
+    labels = scales::label_number(suffix = "º"),
+    n.breaks = 12,
+    guide = guide_legend(reverse = TRUE)
   ) +
-  labs(fill = "Avg temperature")
+  labs(
+    fill = "",
+    title = "Average temperature in Castille and Leon (Spain)",
+    subtitle = "Months of April, May and June"
+  )
 
-
-# Create maximum differences
-
+# Create maximum differences of two months
 variation <- rastertemp %>%
-  mutate(
-    diff = tavg_06 - tavg_04
-  ) %>%
-  select(var_apr_jun = diff)
+  mutate(diff = June - May) %>%
+  select(variation = diff)
 
 # Add also a overlay of a SpatVector
-f_vect <- system.file("extdata/cyl.gpkg", package = "tidyterra")
-
-prov <- vect(f_vect)
+prov <- vect(system.file("extdata/cyl.gpkg", package = "tidyterra"))
 
 ggplot(prov) +
   geom_spatraster(data = variation) +
   geom_spatvector(fill = NA) +
   scale_fill_whitebox_c(
     palette = "deep", direction = -1,
-    labels = scales::label_number(suffix = "º")
+    labels = scales::label_number(suffix = "º"),
+    n.breaks = 5
   ) +
   theme_minimal() +
   coord_sf(crs = 25830) +
   labs(
-    fill = "Difference",
+    fill = "variation",
     title = "Variation of temperature in Castille and Leon (Spain)",
-    subtitle = "(Average) temperatures in June vs. April"
+    subtitle = "Average temperatures in June vs. May"
   )
 ```
 
 {tidyterra} also provide a geom for plotting RGB SpatRaster tiles with {ggplot2}
 
 ```{r example-tile}
-f_tile <- system.file("extdata/cyl_tile.tif", package = "tidyterra")
-
-rgb_tile <- rast(f_tile)
-
+rgb_tile <- rast(system.file("extdata/cyl_tile.tif", package = "tidyterra"))
 
 plot <- ggplot(prov) +
   geom_spatraster_rgb(data = rgb_tile) +
   geom_spatvector(fill = NA) +
   theme_light()
-
 
 plot
 
@@ -237,7 +235,7 @@ plot +
 {tidyterra} provides specific scales for plotting hypsometric maps with
 {ggplot2}:
 
-```{r hypso}
+```{r hypso, fig.asp=0.65}
 asia <- rast(system.file("extdata/asia.tif", package = "tidyterra"))
 
 terra::plot(asia)
@@ -247,18 +245,21 @@ ggplot() +
   scale_fill_hypso_tint_c(
     palette = "gmt_globe",
     labels = scales::label_number(),
-    breaks = c(-10000, -5000, 0, 2500, 5000, 8000),
+    # Further refinements
+    breaks = c(-10000, -5000, 0, 2000, 5000, 8000),
     guide = guide_colorbar(
       direction = "horizontal",
+      nrow = 1,
       title.position = "top",
-      barwidth = 20
+      barwidth = 20,
+      ticks.colour = "black",
+      ticks.linewidth = 0.3
     )
   ) +
   labs(
     fill = "elevation (m)",
     title = "Hypsometric map of Asia"
   ) +
-  theme_minimal() +
   theme(legend.position = "bottom")
 ```
 
@@ -273,7 +274,12 @@ vect(system.file("ex/lux.shp", package = "terra")) %>%
   summarise(pop_dens = sum(POP) / sum(AREA)) %>%
   glimpse() %>%
   autoplot(aes(fill = pop_dens)) +
-  scale_fill_whitebox_c(palette = "pi_y_g")
+  scale_fill_whitebox_c(palette = "pi_y_g") +
+  labs(
+    fill = "population per km2",
+    title = "Population density of Luxembourg",
+    subtitle = "By commune"
+  )
 ```
 
 ## I need your feedback
